--- a/VCU.ioc
+++ b/VCU.ioc
@@ -69,9 +69,6 @@ Dma.TIM5_CH2.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.TIM5_CH2.1.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM5_CH2.1.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.TIM5_CH2.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=TaskLoop,24,128,StartTaskLoop,Default,NULL,Dynamic,NULL,NULL;Task10ms,55,128,StartTask10ms,Default,NULL,Dynamic,NULL,NULL;Task100ms,48,128,StartTask100ms,Default,NULL,Dynamic,NULL,NULL;Task250ms,40,128,StartTask250ms,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 IWDG.IPParameters=Prescaler,Reload
@@ -81,86 +78,83 @@ KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=CAN1
-Mcu.IP10=TIM1
-Mcu.IP11=TIM2
-Mcu.IP12=TIM3
-Mcu.IP13=TIM5
+Mcu.IP10=TIM2
+Mcu.IP11=TIM3
+Mcu.IP12=TIM5
+Mcu.IP13=TIM6
 Mcu.IP14=UART4
 Mcu.IP15=USART1
 Mcu.IP2=CAN2
 Mcu.IP3=DMA
-Mcu.IP4=FREERTOS
-Mcu.IP5=I2C1
-Mcu.IP6=IWDG
-Mcu.IP7=NVIC
-Mcu.IP8=RCC
-Mcu.IP9=SYS
+Mcu.IP4=I2C1
+Mcu.IP5=IWDG
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SYS
+Mcu.IP9=TIM1
 Mcu.IPNb=16
 Mcu.Name=STM32F105R(8-B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PC6
-Mcu.Pin11=PC7
-Mcu.Pin12=PC8
-Mcu.Pin13=PC9
-Mcu.Pin14=PA8
-Mcu.Pin15=PA9
-Mcu.Pin16=PA10
-Mcu.Pin17=PA11
-Mcu.Pin18=PA12
-Mcu.Pin19=PA13
-Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=PA14
-Mcu.Pin21=PC10
-Mcu.Pin22=PC11
-Mcu.Pin23=PB4
-Mcu.Pin24=PB5
-Mcu.Pin25=PB8
-Mcu.Pin26=PB9
-Mcu.Pin27=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin28=VP_IWDG_VS_IWDG
-Mcu.Pin29=VP_SYS_VS_tim7
-Mcu.Pin3=PC1
-Mcu.Pin30=VP_TIM2_VS_no_output1
-Mcu.Pin31=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin32=VP_TIM5_VS_no_output1
-Mcu.Pin33=VP_TIM5_VS_no_output2
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PB12
-Mcu.Pin7=PB13
-Mcu.Pin8=PB14
-Mcu.Pin9=PB15
-Mcu.PinsNb=34
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PB14
+Mcu.Pin11=PB15
+Mcu.Pin12=PC6
+Mcu.Pin13=PC7
+Mcu.Pin14=PC8
+Mcu.Pin15=PC9
+Mcu.Pin16=PA8
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA11
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PA12
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PC10
+Mcu.Pin24=PC11
+Mcu.Pin25=PB4
+Mcu.Pin26=PB5
+Mcu.Pin27=PB8
+Mcu.Pin28=PB9
+Mcu.Pin29=VP_IWDG_VS_IWDG
+Mcu.Pin3=PD0-OSC_IN
+Mcu.Pin30=VP_SYS_VS_Systick
+Mcu.Pin31=VP_TIM2_VS_no_output1
+Mcu.Pin32=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM5_VS_no_output1
+Mcu.Pin34=VP_TIM5_VS_no_output2
+Mcu.Pin35=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin4=PD1-OSC_OUT
+Mcu.Pin5=PC1
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PB12
+Mcu.Pin9=PB13
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F105RBTx
 MxCube.Version=6.1.1
 MxDb.Version=DB.6.0.10
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.CAN1_RX0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.CAN2_RX1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
-NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.DMA1_Channel5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.DMA2_Channel4_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.DMA2_Channel5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.CAN2_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA2_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA2_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
-NVIC.SavedPendsvIrqHandlerGenerated=true
-NVIC.SavedSvcallIrqHandlerGenerated=true
-NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
-NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.TimeBase=TIM7_IRQn
-NVIC.TimeBaseIP=TIM7
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM6_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
@@ -232,6 +226,10 @@ PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=LED
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
+PC14-OSC32_IN.Mode=LSE-External-Oscillator
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+PC15-OSC32_OUT.Mode=LSE-External-Oscillator
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC6.GPIOParameters=GPIO_Label
 PC6.GPIO_Label=WP
 PC6.Locked=true
@@ -277,14 +275,14 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=STM_VCU.ioc
-ProjectManager.ProjectName=STM_VCU
+ProjectManager.ProjectFileName=VCU.ioc
+ProjectManager.ProjectName=VCU
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_CAN1_Init-CAN1-false-HAL-true,7-MX_I2C1_SMBUS_Init-I2C1-false-HAL-true,8-MX_UART4_Init-UART4-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM1_Init-TIM1-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true,14-MX_IWDG_Init-IWDG-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CAN2_Init-CAN2-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_CAN1_Init-CAN1-false-HAL-true,7-MX_I2C1_SMBUS_Init-I2C1-false-HAL-true,8-MX_UART4_Init-UART4-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM1_Init-TIM1-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true,14-MX_IWDG_Init-IWDG-false-HAL-true,15-MX_TIM7_Init-TIM7-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
@@ -336,16 +334,17 @@ TIM5.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
 TIM5.IPParameters=Channel-Output Compare1 No Output,Channel-Output Compare2 No Output,Prescaler,Period
 TIM5.Period=10
 TIM5.Prescaler=100
+TIM6.IPParameters=Prescaler,Period
+TIM6.Period=1000-1
+TIM6.Prescaler=72-1
 UART4.IPParameters=VirtualMode
 UART4.VirtualMode=Asynchronous
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
-VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
-VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
-VP_SYS_VS_tim7.Mode=TIM7
-VP_SYS_VS_tim7.Signal=SYS_VS_tim7
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
@@ -354,4 +353,6 @@ VP_TIM5_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM5_VS_no_output1.Signal=TIM5_VS_no_output1
 VP_TIM5_VS_no_output2.Mode=Output Compare2 No Output
 VP_TIM5_VS_no_output2.Signal=TIM5_VS_no_output2
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
